test/scc_test/exp/semantic-errors/089.t
void test()
{
    struct A {int x;} a, b;
    a == b;
}